Wired: fix dark mode for even more heading classes

--- a/styles/wired.user.css
+++ b/styles/wired.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wired
 @namespace      https://aldaviva.com/userstyles/
-@version        1.0.5
+@version        1.0.6
 @description    Dark mode for articles
 @author         Ben Hutchison <ben@aldaviva.com> (https://aldaviva.com)
 @license        MIT
@@ -41,7 +41,10 @@
         
         #main-content :is(li, p, a:not(.button):link, a:not(.button):visited),
         .recirc-list__items .byline__name,
+        .heading-h3,
+        .heading-h4,
         .heading-h5,
+        .heading-h6,
         div[data-testid="ReviewPageMainContent"] :is(span,div),
         span[class*="GalleryEmbedControlsCounterIndex-"],
         div[class*="GalleryEmbedCaptionSlideBody-"] {
